Fixed overflow, changed layout based on login, moved code

--- a/client/pyDraw.css
+++ b/client/pyDraw.css
@@ -20,7 +20,6 @@ h1{
 }
 body{
    overflow-x:hidden;
-   overflow-y:hidden;
    position:relative;
 }
 html {
